--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-spring.application.name=server-product-management
+spring.application.name=product-server
+
+#datasource
+spring.datasource.url=jdbc:postgresql://localhost:3306/dbproduct?useUnicode=true&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
+#you should change it according to your credentials.
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+#This can be update, create, validate or none.
+spring.jpa.hibernate.ddl-auto=none
+
+#liquibase
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
